--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="content-body">
-  <router-outlet></router-outlet>
-</div>
+<app-sidebar-menu></app-sidebar-menu>
+
+<router-outlet></router-outlet>
