--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -1,3 +1,61 @@
-<mat-toolbar>
-    
-</mat-toolbar>
+<mat-sidenav-container fullscreen>
+	<mat-sidenav
+		#sidenav
+		mode="side"
+		class="example-sidenav"
+		[ngStyle]="{ 'width.em': sidenavWidth }"
+		opened="true"
+		(mouseenter)="increase()"
+		(mouseleave)="decrease()"
+	>
+		<mat-nav-list>
+            <mat-list-item>
+                <mat-icon mat-list-icon>dehaze</mat-icon>
+                <div fxFlex="10"></div>
+                <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+                    <img src="/assets/images/stalker.png" alt="" class="logo">
+				</div>
+                
+            </mat-list-item>
+			<mat-list-item routerLink="map" routerLinkActive="active">
+				<mat-icon mat-list-icon>location_on</mat-icon>
+				<div fxFlex="10"></div>
+				<div *ngIf="sidenavWidth > 6" class="sidenav-item">
+					<h5>Map</h5>
+				</div>
+			</mat-list-item>
+
+			<mat-list-item routerLink="clients" routerLinkActive="active">
+				<mat-icon mat-list-icon>store</mat-icon>
+				<div fxFlex="10"></div>
+				<div *ngIf="sidenavWidth > 6" class="sidenav-item">
+					<h5>Clients</h5>
+				</div>
+			</mat-list-item>
+
+			<mat-list-item routerLink="routes" routerLinkActive="active">
+				<mat-icon mat-list-icon>route</mat-icon>
+				<div fxFlex="10"></div>
+				<div *ngIf="sidenavWidth > 6" class="sidenav-item">
+					<h5>Routes</h5>
+				</div>
+			</mat-list-item>
+
+            <div >
+                <mat-list-item routerLink="planning" routerLinkActive="active">
+                    <mat-icon mat-list-icon>edit_calendar</mat-icon>
+                    <div fxFlex="10"></div>
+                    <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+                        <h5>Planning</h5>
+                    </div>
+                </mat-list-item>    
+            </div>
+            
+            
+		</mat-nav-list>
+	</mat-sidenav>
+
+	<div class="example-sidenav-content">
+		<router-outlet></router-outlet>
+	</div>
+</mat-sidenav-container>
