--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-sidebar-menu></app-sidebar-menu>
-
-<router-outlet></router-outlet>
+<div class="app-view">
+    <app-upper-menu></app-upper-menu>
+    <app-sidebar-menu></app-sidebar-menu>
+    <router-outlet></router-outlet>
+</div>
