--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-view">
     <app-upper-menu></app-upper-menu>
     <app-sidebar-menu></app-sidebar-menu>
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
 </div>
