--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.css
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.css
@@ -1,10 +1,15 @@
 .example-sidenav-content {
-	display: flex;
-	height: 100vh;
-	align-items: center;
-	justify-content: center;
+	
 }
 
+.tool{
+    background-color: #fff;
+    height: 9%;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+.flexExpand {
+    flex: 1 1 auto;
+}
 .example-sidenav {
 	background-color: #27AE61;
     border-radius: 0px 30px 30px 0px;
