--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -1,24 +1,16 @@
 .map-container {
-    position: absolute;
-    top: 0;
+    /* top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
-    margin: 30px;
+    bottom: 0; */
+    width: 1000px;
+    height: 400px;
+    border: 2px solid black;
   }
   
-  .map-frame {
-    border: 2px solid black;
-    height: 100%;
-  }
+  
   
   #map {
-<<<<<<< HEAD
-    height: 20%;
-  }
-  
-=======
     height: 100%;
   }
->>>>>>> origin/master
   
