--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -1,5 +1,6 @@
+<h5>Map Display</h5>
 <div class="map-container">
-    <div class="map-frame">
+    
       <div id="map"></div>
-    </div>
-  </div>
+    
+</div>
