--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -2,13 +2,13 @@
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 30px;
+    height: 100%;
+    width: 100%;
+ 
+  
   }
   
-  .map-frame {
-    border: 2px solid black;
+  .map-frame { 
     height: 100%;
   }
   
