map displayed fixed

--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.css
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.css
@@ -1,11 +1,20 @@
 .example-sidenav-content {
-	
+    width: 100%;
+    
 }
 
 .tool{
-    background-color: #fff;
-    height: 9%;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    width: 100%;
+    background-color: rgb(246, 250, 247);
+    height: 6%;
+    margin: 0;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.body{
+    position: fixed;
+    width: 100%;
+    height:100%;
 }
 .flexExpand {
     flex: 1 1 auto;
@@ -20,7 +29,7 @@
 
 .sidenav-item {
 	color: white;
-	font-size: 30px;
+	font-size: 40px;
 }
 
 .side-nav{
