fix siednav items

--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.css
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.css
@@ -29,12 +29,14 @@
 
 .sidenav-item {
 	color: white;
-	font-size: 40px;
+	font-size: 16px;
+}
+.sidenav-item span{
+    margin-left: 9px;
 }
 
-.side-nav{
-    position: fixed;
-}
+
+
 
 mat-icon {
 	color: white;
