--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -25,7 +25,7 @@
 				</div>
 			</mat-list-item>
 
-			<mat-list-item routerLink="clients" routerLinkActive="active">
+			<mat-list-item routerLink="client" routerLinkActive="active">
 				<mat-icon mat-list-icon>store</mat-icon>
 				<div fxFlex="10"></div>
 				<div *ngIf="sidenavWidth > 6" class="sidenav-item">
@@ -64,7 +64,7 @@
                 <mat-icon>arrow_back</mat-icon>
             </a> -->
             <div fxFlex="100%"  class="flexExpand"></div>
-            <span style="font-size: 16px; color: #323030;">Ennaji Fadma</span>
+            <span style="font-size: 16px; color: #323030;">Mellah Khaoula</span>
             <button mat-icon-button [matMenuTriggerFor]="logout" 
                 #menuTrigger="matMenuTrigger" (click)="menuTrigger.openMenu()">
 
