--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -3,9 +3,9 @@
     left: 0;
     right: 0;
     bottom: 0; */
-    width: 1000px;
+    width: 1215px;
     height: 400px;
-    border: 2px solid black;
+    border: 2px solid white;
   }
   
   
