--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -1,19 +1,19 @@
 /* .map-container {
-  position: relative;
-    /* top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; */
-    /* width: 100vw;
-    height: 100vh; */
-    /* border: 2px solid black; 
-  } */
+  /* position: absolute;
+  top: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0px; 
+} */
   
   
-  
-  #map {
-    
-    height: 100%;
-    
-  }
+#map {
+  height: 100%;
+}
+
+.map-frame {
+  /* border: 2px solid black; */
+  height: 100%;
+}
   
