--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.css
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.css
@@ -4,6 +4,11 @@
 }
 
 .tool{
+    /* position: fixed; */
+    position: sticky;
+    position: -webkit-sticky; /* For macOS/iOS Safari */
+    top: 0; /* Sets the sticky toolbar to be on top */
+    z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
     width: 100%;
     background-color: rgb(246, 250, 247);
     height: 6%;
@@ -12,9 +17,16 @@
 }
 
 .body{
-    position: fixed;
-    width: 100%;
-    height:100%;
+    /* position: fixed; */
+    /* z-index:-1; */
+    position: absolute;
+    top: 40px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0px;
+    /* width: 100%;
+    height:100%; */
 }
 .flexExpand {
     flex: 1 1 auto;
@@ -27,6 +39,9 @@
 	background-color: rgba(9, 30, 66, 0.25);
 }
 
+.sidebar-toggle{
+    color: #27AE61;
+}
 .sidenav-item {
 	color: white;
 	font-size: 16px;
