--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -1,19 +1,26 @@
 <mat-sidenav-container fullscreen>
-	<mat-sidenav
-		#sidenav
-		mode="side"
-		class="example-sidenav"
-		(click) = "sidenav.toggle()"
-		opened="false"
-	>
-		<mat-nav-list>
+    <mat-sidenav #sidenav mode="side" class="example-sidenav" (click)="sidenav.toggle()" opened="false">
+        <mat-nav-list>
             <mat-list-item routerLink="map">
                 <mat-icon mat-list-icon>home</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth > 6" class="sidenav-item">
                     <span><img src="/assets/images/stalker.png" alt="" class="logo"></span>
-				</div>
-                
+                </div>
+
+            </mat-list-item>
+            <mat-list-item routerLink="map" routerLinkActive="active">
+
+                <mat-icon mat-list-icon>location_on</mat-icon>
+
+                <div fxFlex="10"></div>
+
+                <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+
+                    <span>Map</span>
+
+                </div>
+
             </mat-list-item>
 
             <mat-list-item routerLink="client" routerLinkActive="active">
@@ -48,7 +55,7 @@
 
     <div class="example-sidenav-content">
 
-        
+
         <mat-toolbar class="tool" fxLayout fxLayoutGap="16px">
             <button mat-icon-button>
                 <mat-icon (click)="sidenav.toggle()" class="sidebar-toggle">menu</mat-icon>
@@ -58,10 +65,10 @@
                     <mat-icon>arrow_back</mat-icon>
                 </a> 
             -->
-            <div fxFlex="100%"  class="flexExpand"></div>
+            <div fxFlex="100%" class="flexExpand"></div>
             <span style="font-size: 12px; color: #444242;">Auditor Hicham</span>
-            <button mat-icon-button [matMenuTriggerFor]="logout" 
-                #menuTrigger="matMenuTrigger" (click)="menuTrigger.openMenu()">
+            <button mat-icon-button [matMenuTriggerFor]="logout" #menuTrigger="matMenuTrigger"
+                (click)="menuTrigger.openMenu()">
 
                 <mat-icon style="color: #323030;">keyboard_arrow_down</mat-icon>
 
