--- a/frontend/src/app/addclient/addclient.component.css
+++ b/frontend/src/app/addclient/addclient.component.css
@@ -17,8 +17,12 @@
 .map-container{ 
     width: 700px;
     height: 400px;
-    margin: 20px ;
+    /* margin: 20px ; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    /* display: flex;
+    justify-content: center; */
+    margin: auto;
+    
 }
 
 .small-video {
