--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -1,6 +1,11 @@
 
 <div class="map-frame">
-<div id="map"></div>
+      <div id="map">
+      </div>
+      <div class="buttons-wrapper">
+            <button>Add PDV</button>
+            <button>Synchronize</button>
+      </div>
 </div>
 
     
