--- a/frontend/src/app/map/map.component.css
+++ b/frontend/src/app/map/map.component.css
@@ -13,7 +13,13 @@
 }
 
 .map-frame {
+  position: relative;
   /* border: 2px solid black; */
   height: 100%;
+}
+.buttons-wrapper{
+  position: absolute;
+  bottom: 10px;
+  border: 1px solid red;
 }
   
