--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="NFC-container">
-        <div class="reas-nfc">
+        <div class="read-nfc">
             <label class="input-label">NFC card puce : </label>
             <button class="action-button" >Read</button>
         </div>
@@ -41,9 +41,42 @@
             <label class="input-label">Qr Code : </label>
             <button class="action-button" >Scan</button>
         </div>
-        <div class="reas-nfc">
+        <div class="nfc-photo">
             <label class="input-label">NFC photo : </label>
-            <button class="action-button" ></button>
+            <button mat-button class="action-button" ><mat-icon>camera</mat-icon></button>
         </div>
+        <div >
+            <select class="custom-select" >
+                <option value="0"> PV Type </option>
+                <option value="1">Attar</option>
+                <option value="2">BMW</option>
+                <option value="3">Citroen</option>
+                <option value="4">Ford</option>
+                <option value="5">Honda</option>
+                <option value="6">Jaguar</option>
+                <option value="7">Land Rover</option>
+              </select>
+        </div>
+        <div class="name-container">
+            <mat-form-field class="example-full-width">
+                <mat-label>First Name & Last Name</mat-label>
+                <textarea matInput placeholder="Typing..."></textarea>
+              </mat-form-field>
+        </div>
+        <div class="phone-caontainer">
+            <mat-form-field class="example-full-width">
+                <mat-label>Phone number</mat-label>
+                <textarea matInput placeholder="+212"></textarea>
+              </mat-form-field>
+              <button class="action-button" >Verify</button>
+        </div>
+        <div class="read-nfc">
+            <label class="input-label">PV photo : </label>
+            <button mat-button class="action-button" ><mat-icon>camera</mat-icon></button>
+        </div>
+        <div class="action">
+            <button class="check-button">Send</button>
+        </div>
+            
     </div>
 </div>
