--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -23,7 +23,7 @@
 
             </mat-list-item>
 
-            <mat-list-item routerLink="client" routerLinkActive="active">
+            <mat-list-item routerLink="clients" routerLinkActive="active">
                 <mat-icon mat-list-icon>store</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth > 6" class="sidenav-item">
