--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -11,7 +11,7 @@
             </button>  -->
             <div class="my-location-container">
                   <button mat-icon-button class="icon-button-large" 
-                  aria-label="small button" (click)="getLocation()">
+                  aria-label="small button" (click)="locate()">
                         <mat-icon>my_location</mat-icon>
                   </button>
             </div>
