--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="map-container">
-        <!-- <app-map></app-map> -->
+        <app-map></app-map>
     </div>
 
     <div class="checkcodes-container">
