make home page responsive

--- a/frontend/src/app/clients/clients.component.html
+++ b/frontend/src/app/clients/clients.component.html
@@ -1,6 +1,5 @@
-<p>clients works!</p>
-
-<div class="map-container">
-    <!-- <app-map></app-map> -->
-</div>
-
+<!-- <div class="container">
+    <div class="filter">
+        <button></button>
+    </div>
+</div> -->
