--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -1,20 +1,21 @@
 <div class="map-frame">
       <div id="map"></div>
       <div class="buttons-wrapper">
+            <div class="my-location-container">
+
+                  <button mat-icon-button  
+                  aria-label="small button" (click)="locate()">
+                        <mat-icon>my_location</mat-icon>
+                  </button>
+
+            </div>
             <button mat-button class="btn-primary" routerLink="/addclient">Add PDV</button>
             <button mat-button class="btn-warning">Synchronize</button>
       </div>
       <div class="map-top-elements">
-            
             <!-- <button mat-raised-button class="my-location">
                   <mat-icon>my_location</mat-icon>
             </button>  -->
-            <div class="my-location-container">
-                  <button mat-icon-button class="icon-button-large" 
-                  aria-label="small button" (click)="locate()">
-                        <mat-icon>my_location</mat-icon>
-                  </button>
-            </div>
             <div class="element-container">
                   <div class="search-input">
                         <mat-icon>search</mat-icon>
@@ -24,16 +25,21 @@
             </div>
             <div class="element-container">
                   <div class="select-input">
-                        <mat-select panelClass="select-panel">
+                        <mat-select panelClass="selectPanel" placeholder="PDV Type">
                               <mat-option value="">Audit</mat-option>
                               <mat-option value="">Audit Retail</mat-option>
                               <mat-option value="">Other stuff</mat-option>
                         </mat-select>
-                        <mat-icon>keyboard_arrow_down</mat-icon>
                   </div>
             </div>
-            
-            
+            <div class="element-container">
+                  <div class="select-input">
+                        <mat-select panelClass="selectPanel" placeholder="Done">
+                              <mat-option value="">Done</mat-option>
+                              <mat-option value="">Not Done</mat-option>
+                        </mat-select>
+                  </div>
+            </div> 
       </div>
 </div>
 
